# tamfis-code

./: .gitignore  MANIFEST.in  OPENHANDS_PARITY_MATRIX.md  README.md  RELEASE_0.4.44.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.12.md  RELEASE_NOTES_0.6.13.md  RUNTIME_REBUILD_0.7.0.md  STANDALONE_BOUNDARY_FIX.md  STATUS.md  UPGRADE_REPORT.md  USAGE_INSTALL_RELEASE.md  VALIDATION_SEVERITY_FIX.md  install.sh  pyproject.toml  pytest.ini  upgrade.sh
.github/workflows/: publish.yml
tamfis_code/: __init__.py  agent_definitions.py  agents.py  api_client.py  cli.py  clipboard.py  completion.py  config.py  custom_commands.py  doctor.py  enforcer.py  evidence.py  github_commands.py  hooks.py  indexer.py  instructions.py  interactive.py  live_input.py  local_chat.py  local_tools.py  mcp.py  mcp_stdio_server.py  metrics.py  model_registry.py  planreview.py  project.py  provider_protocols.py  providers.py  pty.py  references.py  render.py  routing.py  runner.py  runner_local.py  safety.py  screenshot.py  sessions.py  state.py  swarm.py  tasks.py  (+4 more)
tamfis_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tamfis_code/openhands/: __init__.py  agent.py  agent_server.py  automation.py  compat.py  conversation.py  delegation.py  events.py  leases.py  security.py  skills.py  tools.py  workspace.py
tamfis_code/orchestrator/: __init__.py  context.py  engine.py  planner.py  protocols.py  validator.py
tamfis_code/runtime/: __init__.py  budgets.py  controller.py  evidence.py  state.py
tests/: test_agent_definitions.py  test_agents.py  test_agents_delegation.py  test_build_installation.py  test_cli_commands.py  test_clipboard.py  test_completion.py  test_context_rollover.py  test_custom_commands.py  test_cwd_validation.py  test_doctor_session_diagnostics.py  test_enforcer.py  test_fake_tool_detection.py  test_find_references.py  test_github_command_surface.py  test_hooks.py  test_indexer.py  test_instructions.py  test_integration_new.py  test_intelligent_planner.py  test_interactive_standalone.py  test_live_input.py  test_local_mode.py  test_local_pty.py  test_mcp.py  test_mcp_search_bounds.py  test_mcp_standalone_degradation.py  test_mcp_stdio_server.py  test_metrics.py  test_openhands_runtime.py  test_openrouter_cost_routing.py  test_orchestrator.py  test_parity_contracts.py  test_plan_mode_gate.py  test_plan_steps_and_attempts.py  test_planreview.py  test_provider_protocols.py  test_reasoning_effort_capability.py  test_reasoning_plan.py  test_references.py  (+21 more)
