[project]
name = "tamfis-code"
version = "0.1.0"
description = "TamfisGPT Code -- terminal coding agent client for the TamfisGPT Remote agent runtime"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
tamfis-code = "tamfis_code.cli:main"
tamgpt-code = "tamfis_code.cli:main"
tamfis = "tamfis_code.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tamfis_code"]
